--- a/275 - Ein neuronales Netz mit mehreren Ausgaengen/Neuronales Netz (Aktivierungsfunktionen).ipynb
+++ b/275 - Ein neuronales Netz mit mehreren Ausgaengen/Neuronales Netz (Aktivierungsfunktionen).ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-01 12:11:30.463209: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-01 12:11:30.625621: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-10-01 12:11:38.118342: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+     ]
+    }
+   ],
    "source": [
     "# Vorstellung: MNIST-Daten!\n",
     "# http://yann.lecun.com/exdb/mnist/\n",
@@ -46,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +67,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alex/anaconda3/envs/ml/lib/python3.11/site-packages/keras/src/layers/core/dense.py:92: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
+      "2025-10-01 12:11:47.475678: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+     ]
+    }
+   ],
    "source": [
     "model = Sequential()\n",
     "\n",
@@ -70,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,34 +99,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 1s 12us/step - loss: 1.2731 - acc: 0.5742\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 35ms/step - accuracy: 0.5417 - loss: 1.4153\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.8504 - acc: 0.7157\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 36ms/step - accuracy: 0.6987 - loss: 0.9018\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.7496 - acc: 0.7464\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 40ms/step - accuracy: 0.7316 - loss: 0.7890\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.6952 - acc: 0.7610\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 33ms/step - accuracy: 0.7512 - loss: 0.7284\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.6599 - acc: 0.7735\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 41ms/step - accuracy: 0.7613 - loss: 0.6908\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.6319 - acc: 0.7808\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 39ms/step - accuracy: 0.7734 - loss: 0.6570\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.6132 - acc: 0.7872\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 59ms/step - accuracy: 0.7808 - loss: 0.6373\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 1s 10us/step - loss: 0.6009 - acc: 0.7914\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 68ms/step - accuracy: 0.7875 - loss: 0.6141\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 1s 10us/step - loss: 0.5860 - acc: 0.7959\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 42ms/step - accuracy: 0.7918 - loss: 0.5984\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 1s 10us/step - loss: 0.5766 - acc: 0.7993\n"
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 21ms/step - accuracy: 0.7977 - loss: 0.5885\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb176697b8>"
+       "<keras.src.callbacks.history.History at 0x7fa2b668bf90>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,23 +141,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 0s 23us/step\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.7865 - loss: 0.6140\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.5947521679401397, 0.793]"
+       "[0.6140457391738892, 0.7864999771118164]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,27 +168,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = model.predict(X_test.reshape(-1, 784))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.04052383, 0.01013587, 0.6088565 , 0.01352766, 0.11325114,\n",
-       "       0.01926491, 0.15268987, 0.0048103 , 0.02799441, 0.00894551],\n",
+       "array([0.02326993, 0.00122168, 0.6794386 , 0.0056218 , 0.12506688,\n",
+       "       0.00315327, 0.14602146, 0.00412473, 0.00982066, 0.00226095],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,16 +207,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float32(0.99999994)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +235,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -220,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
