--- a/275 - Ein neuronales Netz mit mehreren Ausgaengen/Neuronales Netz (Optimizers).ipynb
+++ b/275 - Ein neuronales Netz mit mehreren Ausgaengen/Neuronales Netz (Optimizers).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -79,34 +79,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 1s 15us/step - loss: 1.0989 - acc: 0.6670\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 66ms/step - accuracy: 0.6529 - loss: 1.1618\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 1s 8us/step - loss: 0.6780 - acc: 0.7853\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 59ms/step - accuracy: 0.7691 - loss: 0.7164\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 1s 8us/step - loss: 0.5875 - acc: 0.8070\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 55ms/step - accuracy: 0.7957 - loss: 0.6208\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.5413 - acc: 0.8167\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 57ms/step - accuracy: 0.8068 - loss: 0.5748\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.5196 - acc: 0.8222\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 70ms/step - accuracy: 0.8160 - loss: 0.5396\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.5017 - acc: 0.8265\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 62ms/step - accuracy: 0.8232 - loss: 0.5141\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.4965 - acc: 0.8282\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 49ms/step - accuracy: 0.8268 - loss: 0.5030\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 1s 9us/step - loss: 0.4904 - acc: 0.8287\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 57ms/step - accuracy: 0.8275 - loss: 0.4957\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 1s 10us/step - loss: 0.4830 - acc: 0.8330\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 67ms/step - accuracy: 0.8304 - loss: 0.4839\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 1s 10us/step - loss: 0.4851 - acc: 0.8335\n"
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 64ms/step - accuracy: 0.8331 - loss: 0.4716\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb2b7b3898>"
+       "<keras.src.callbacks.history.History at 0x7fefc6fce710>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,23 +121,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 0s 34us/step\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m7s\u001b[0m 18ms/step - accuracy: 0.8301 - loss: 0.4906\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.5140968108654023, 0.8234]"
+       "[0.49057427048683167, 0.8300999999046326]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,27 +148,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 8ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = model.predict(X_test.reshape(-1, 784))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.04052383, 0.01013587, 0.6088565 , 0.01352766, 0.11325114,\n",
-       "       0.01926491, 0.15268987, 0.0048103 , 0.02799441, 0.00894551],\n",
-       "      dtype=float32)"
+       "array([5.8559733e-03, 1.6577807e-03, 7.9308355e-01, 2.6479717e-03,\n",
+       "       3.5519283e-02, 3.3643665e-03, 1.5298486e-01, 2.4873091e-04,\n",
+       "       4.5370157e-03, 1.0051708e-04], dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float32(1.0)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +215,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -221,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
