--- a/275 - Ein neuronales Netz mit mehreren Ausgaengen/Neuronales Netz (Softmax).ipynb
+++ b/275 - Ein neuronales Netz mit mehreren Ausgaengen/Neuronales Netz (Softmax).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,13 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "model = Sequential()\n",
     "\n",
     "model.add(Dense(100, activation=\"sigmoid\", input_shape=(784,)))\n",
+    "# softmax fuer mehrklassige Klassifikation\n",
     "model.add(Dense(10, activation=\"softmax\"))\n",
     "\n",
     "model.compile(optimizer=\"sgd\", loss=\"categorical_crossentropy\", metrics=[\"accuracy\"])"
@@ -70,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -78,34 +79,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 1.6884 - acc: 0.4720\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m3s\u001b[0m 26ms/step - accuracy: 0.4663 - loss: 1.7380\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 0s 8us/step - loss: 1.2247 - acc: 0.6644\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 22ms/step - accuracy: 0.6659 - loss: 1.2635\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 1.0616 - acc: 0.7055\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 11ms/step - accuracy: 0.7142 - loss: 1.0773\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 0.9585 - acc: 0.7315\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.7398 - loss: 0.9681\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 0.8877 - acc: 0.7461\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 12ms/step - accuracy: 0.7524 - loss: 0.8921\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 0.8336 - acc: 0.7585\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.7636 - loss: 0.8352\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 0s 8us/step - loss: 0.7890 - acc: 0.7694\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.7713 - loss: 0.7927\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 0.7541 - acc: 0.7767\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.7798 - loss: 0.7543\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 0.7237 - acc: 0.7831\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.7845 - loss: 0.7256\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 0s 7us/step - loss: 0.6994 - acc: 0.7867\n"
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 10ms/step - accuracy: 0.7910 - loss: 0.6994\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb22e937f0>"
+       "<keras.src.callbacks.history.History at 0x7f63be1cc810>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,27 +121,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step\n"
+     ]
+    }
+   ],
    "source": [
     "predictions = model.predict(X_test.reshape(-1, 784))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.04052383, 0.01013587, 0.6088565 , 0.01352766, 0.11325114,\n",
-       "       0.01926491, 0.15268987, 0.0048103 , 0.02799441, 0.00894551],\n",
+       "array([0.0263117 , 0.01026875, 0.6687343 , 0.01590227, 0.08030959,\n",
+       "       0.0157965 , 0.14252739, 0.00580261, 0.01753069, 0.01681606],\n",
        "      dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,16 +160,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.0"
+       "np.float32(0.9999999)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,18 +177,11 @@
    "source": [
     "np.sum(predictions[1])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
