Abschnitt 7: Bilderkennung mit CNNs (Max Polling, Flatten, Dropout)

--- a/300 - CNN/Dropout.ipynb
+++ b/300 - CNN/Dropout.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-02 12:31:34.123008: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-02 12:31:34.257869: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-10-02 12:31:39.734264: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+     ]
+    }
+   ],
    "source": [
     "# Vorstellung: MNIST-Daten!\n",
     "# http://yann.lecun.com/exdb/mnist/\n",
@@ -12,7 +23,7 @@
     "\n",
     "import gzip\n",
     "import numpy as np\n",
-    "from keras.utils import to_categorical\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "def open_images(filename):\n",
     "    with gzip.open(filename, \"rb\") as file:\n",
@@ -39,49 +50,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alex/anaconda3/envs/ml/lib/python3.11/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
+      "2025-10-02 12:31:46.034785: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2025-10-02 12:31:46.551224: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:84] Allocation of 188160000 exceeds 10% of free system memory.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 2s 32us/step - loss: 0.9056 - acc: 0.7364\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 302ms/step - accuracy: 0.6984 - loss: 1.0153\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.4964 - acc: 0.8350\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 250ms/step - accuracy: 0.8278 - loss: 0.5305\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.3994 - acc: 0.8623\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 241ms/step - accuracy: 0.8584 - loss: 0.4200\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.3544 - acc: 0.8755\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 246ms/step - accuracy: 0.8719 - loss: 0.3691\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.3288 - acc: 0.8844\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m15s\u001b[0m 255ms/step - accuracy: 0.8820 - loss: 0.3381\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.3046 - acc: 0.8918\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 292ms/step - accuracy: 0.8875 - loss: 0.3190\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.2871 - acc: 0.8975\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 376ms/step - accuracy: 0.8925 - loss: 0.3021\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.2745 - acc: 0.9014\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 359ms/step - accuracy: 0.8973 - loss: 0.2894\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.2618 - acc: 0.9065\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 383ms/step - accuracy: 0.8997 - loss: 0.2794\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 1s 14us/step - loss: 0.2523 - acc: 0.9095\n"
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 380ms/step - accuracy: 0.9039 - loss: 0.2696\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f897d465ef0>"
+       "<keras.src.callbacks.history.History at 0x7eff15c83d50>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D, MaxPooling2D, Flatten, Dropout\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Flatten, Dropout\n",
     "\n",
     "model = Sequential()\n",
     "\n",
@@ -105,17 +126,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-02 12:34:57.450894: W external/local_xla/xla/tsl/framework/cpu_allocator_impl.cc:84] Allocation of 188160000 exceeds 10% of free system memory.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60000/60000 [==============================] - 4s 74us/step\n",
-      "[0.2387299718638261, 0.9161166666666667]\n",
-      "10000/10000 [==============================] - 1s 73us/step\n",
-      "[0.30063991043567656, 0.8926]\n"
+      "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m54s\u001b[0m 28ms/step - accuracy: 0.9082 - loss: 0.2562\n",
+      "[0.2561664581298828, 0.9081500172615051]\n",
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 31ms/step - accuracy: 0.8847 - loss: 0.3179\n",
+      "[0.3179348111152649, 0.8847000002861023]\n"
      ]
     }
    ],
@@ -123,20 +151,13 @@
     "print(model.evaluate(X_train.reshape(-1, 28, 28, 1), y_train))\n",
     "print(model.evaluate(X_test.reshape(-1, 28, 28, 1), y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:tensorflow_p36]",
+   "display_name": "ml",
    "language": "python",
-   "name": "conda-env-tensorflow_p36-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -148,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
