--- a/300 - CNN/CNN (Max-Pooling).ipynb
+++ b/300 - CNN/CNN (Max-Pooling).ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-02 12:13:38.617409: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-02 12:13:38.897953: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-10-02 12:13:54.667646: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+     ]
+    }
+   ],
    "source": [
     "# Vorstellung: MNIST-Daten!\n",
     "# http://yann.lecun.com/exdb/mnist/\n",
@@ -12,7 +23,7 @@
     "\n",
     "import gzip\n",
     "import numpy as np\n",
-    "from keras.utils import to_categorical\n",
+    "from tensorflow.keras.utils import to_categorical\n",
     "\n",
     "def open_images(filename):\n",
     "    with gzip.open(filename, \"rb\") as file:\n",
@@ -39,42 +50,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/alex/anaconda3/envs/ml/lib/python3.11/site-packages/keras/src/layers/convolutional/base_conv.py:113: UserWarning: Do not pass an `input_shape`/`input_dim` argument to a layer. When using Sequential models, prefer using an `Input(shape)` object as the first layer in the model instead.\n",
+      "  super().__init__(activity_regularizer=activity_regularizer, **kwargs)\n",
+      "2025-10-02 12:14:06.392319: E external/local_xla/xla/stream_executor/cuda/cuda_platform.cc:51] failed call to cuInit: INTERNAL: CUDA error: Failed call to cuInit: UNKNOWN ERROR (303)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 9s 148us/step - loss: 10.7103 - acc: 0.3316\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 366ms/step - accuracy: 0.5853 - loss: 25.3942\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 8s 137us/step - loss: 9.2763 - acc: 0.4191\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 362ms/step - accuracy: 0.7476 - loss: 7.8225\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 6s 94us/step - loss: 8.7419 - acc: 0.4516\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 341ms/step - accuracy: 0.7835 - loss: 4.7626\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 6s 94us/step - loss: 8.6144 - acc: 0.4591\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 330ms/step - accuracy: 0.8130 - loss: 2.6553\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 6s 94us/step - loss: 7.9543 - acc: 0.4949\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 308ms/step - accuracy: 0.8344 - loss: 1.4191\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 6s 93us/step - loss: 7.1058 - acc: 0.5438\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 359ms/step - accuracy: 0.8422 - loss: 0.8024\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 6s 93us/step - loss: 6.8745 - acc: 0.5554\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 369ms/step - accuracy: 0.8526 - loss: 0.5373\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 5s 84us/step - loss: 3.1799 - acc: 0.7436\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 352ms/step - accuracy: 0.8624 - loss: 0.4299\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 5s 92us/step - loss: 0.9028 - acc: 0.8310\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 362ms/step - accuracy: 0.8738 - loss: 0.3729\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 6s 93us/step - loss: 0.5586 - acc: 0.8454\n"
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m41s\u001b[0m 357ms/step - accuracy: 0.8816 - loss: 0.3384\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb204b1a20>"
+       "<keras.src.callbacks.history.History at 0x7fa45cef36d0>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,8 +102,8 @@
    "source": [
     "# CNN (Max-Pooling, RELU)!\n",
     "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D, MaxPooling2D, Flatten\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Flatten\n",
     "\n",
     "model = Sequential()\n",
     "\n",
@@ -103,23 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 1s 62us/step\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 26ms/step - accuracy: 0.8670 - loss: 0.4067\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.5640673876047134, 0.8366]"
+       "[0.40667206048965454, 0.8669999837875366]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -138,34 +158,34 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 6s 96us/step - loss: 0.9856 - acc: 0.6795\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 381ms/step - accuracy: 0.6360 - loss: 1.0979\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 6s 93us/step - loss: 0.5555 - acc: 0.8015\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 372ms/step - accuracy: 0.7844 - loss: 0.6020\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 5s 91us/step - loss: 0.4660 - acc: 0.8333\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 361ms/step - accuracy: 0.8173 - loss: 0.5041\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 6s 93us/step - loss: 0.4285 - acc: 0.8460\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 358ms/step - accuracy: 0.8353 - loss: 0.4539\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 6s 101us/step - loss: 0.4001 - acc: 0.8552\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m23s\u001b[0m 381ms/step - accuracy: 0.8462 - loss: 0.4240\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 6s 93us/step - loss: 0.3791 - acc: 0.8642\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 351ms/step - accuracy: 0.8527 - loss: 0.4055\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 6s 97us/step - loss: 0.3631 - acc: 0.8691\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m40s\u001b[0m 339ms/step - accuracy: 0.8589 - loss: 0.3885\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 5s 91us/step - loss: 0.3541 - acc: 0.8713\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 388ms/step - accuracy: 0.8648 - loss: 0.3748\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 5s 90us/step - loss: 0.3427 - acc: 0.8754\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m34s\u001b[0m 274ms/step - accuracy: 0.8674 - loss: 0.3635\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 6s 92us/step - loss: 0.3334 - acc: 0.8798\n"
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m17s\u001b[0m 286ms/step - accuracy: 0.8717 - loss: 0.3541\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb20abdfd0>"
+       "<keras.src.callbacks.history.History at 0x7fa45a0d6ed0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,8 +193,8 @@
    "source": [
     "# CNN (Max-Pooling, Sigmoid)!\n",
     "\n",
-    "from keras.models import Sequential\n",
-    "from keras.layers import Dense, Conv2D, MaxPooling2D, Flatten\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense, Conv2D, MaxPooling2D, Flatten\n",
     "\n",
     "model2 = Sequential()\n",
     "\n",
@@ -194,23 +214,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000/10000 [==============================] - 1s 68us/step\n"
+      "\u001b[1m313/313\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 14ms/step - accuracy: 0.8627 - loss: 0.3882\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.3964018678665161, 0.8529]"
+       "[0.3882392942905426, 0.8626999855041504]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,18 +238,11 @@
    "source": [
     "model2.evaluate(X_test.reshape(-1, 28, 28, 1), y_test)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
