--- a/300 - CNN/CNN (Musterloesung).ipynb
+++ b/300 - CNN/CNN (Musterloesung).ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-10-02 10:40:04.693481: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2025-10-02 10:40:04.824348: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2025-10-02 10:40:09.101432: I external/local_xla/xla/tsl/cuda/cudart_stub.cc:31] Could not find cuda drivers on your machine, GPU will not be used.\n"
+     ]
+    }
+   ],
    "source": [
     "# Vorstellung: MNIST-Daten!\n",
     "# http://yann.lecun.com/exdb/mnist/\n",
@@ -39,182 +50,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/80\n",
-      "60000/60000 [==============================] - 15s 242us/step - loss: 10.8200 - acc: 0.3251\n",
-      "Epoch 2/80\n",
-      "60000/60000 [==============================] - 14s 235us/step - loss: 9.9551 - acc: 0.3808\n",
-      "Epoch 3/80\n",
-      "60000/60000 [==============================] - 16s 266us/step - loss: 9.8958 - acc: 0.3847\n",
-      "Epoch 4/80\n",
-      "60000/60000 [==============================] - 15s 244us/step - loss: 9.8483 - acc: 0.3879\n",
-      "Epoch 5/80\n",
-      "60000/60000 [==============================] - 16s 267us/step - loss: 9.8307 - acc: 0.3890\n",
-      "Epoch 6/80\n",
-      "60000/60000 [==============================] - 16s 263us/step - loss: 9.8143 - acc: 0.3901\n",
-      "Epoch 7/80\n",
-      "60000/60000 [==============================] - 15s 245us/step - loss: 9.7997 - acc: 0.3911\n",
-      "Epoch 8/80\n",
-      "60000/60000 [==============================] - 15s 243us/step - loss: 9.7874 - acc: 0.3919\n",
-      "Epoch 9/80\n",
-      "60000/60000 [==============================] - 14s 230us/step - loss: 9.7769 - acc: 0.3924\n",
-      "Epoch 10/80\n",
-      "60000/60000 [==============================] - 14s 230us/step - loss: 9.7829 - acc: 0.3923\n",
-      "Epoch 11/80\n",
-      "60000/60000 [==============================] - 14s 234us/step - loss: 9.7104 - acc: 0.3965\n",
-      "Epoch 12/80\n",
-      "60000/60000 [==============================] - 14s 228us/step - loss: 8.2782 - acc: 0.4847\n",
-      "Epoch 13/80\n",
-      "60000/60000 [==============================] - 14s 236us/step - loss: 8.2051 - acc: 0.4894\n",
-      "Epoch 14/80\n",
-      "60000/60000 [==============================] - 15s 246us/step - loss: 7.8104 - acc: 0.5109\n",
-      "Epoch 15/80\n",
-      "60000/60000 [==============================] - 14s 240us/step - loss: 6.9953 - acc: 0.5572\n",
-      "Epoch 16/80\n",
-      "60000/60000 [==============================] - 14s 233us/step - loss: 3.0823 - acc: 0.7516\n",
-      "Epoch 17/80\n",
-      "60000/60000 [==============================] - 15s 245us/step - loss: 0.4005 - acc: 0.8745\n",
-      "Epoch 18/80\n",
-      "60000/60000 [==============================] - 15s 253us/step - loss: 0.2766 - acc: 0.9038\n",
-      "Epoch 19/80\n",
-      "60000/60000 [==============================] - 15s 257us/step - loss: 0.2186 - acc: 0.9205\n",
-      "Epoch 20/80\n",
-      "60000/60000 [==============================] - 15s 256us/step - loss: 0.1851 - acc: 0.9334\n",
-      "Epoch 21/80\n",
-      "60000/60000 [==============================] - 16s 260us/step - loss: 0.1594 - acc: 0.9422\n",
-      "Epoch 22/80\n",
-      "60000/60000 [==============================] - 16s 259us/step - loss: 0.1437 - acc: 0.9474\n",
-      "Epoch 23/80\n",
-      "60000/60000 [==============================] - 15s 247us/step - loss: 0.1260 - acc: 0.9546\n",
-      "Epoch 24/80\n",
-      "60000/60000 [==============================] - 13s 222us/step - loss: 0.1135 - acc: 0.9590\n",
-      "Epoch 25/80\n",
-      "60000/60000 [==============================] - 13s 224us/step - loss: 0.1057 - acc: 0.96275s - l\n",
-      "Epoch 26/80\n",
-      "60000/60000 [==============================] - 13s 223us/step - loss: 0.0952 - acc: 0.9662\n",
-      "Epoch 27/80\n",
-      "60000/60000 [==============================] - 14s 236us/step - loss: 0.0891 - acc: 0.9681\n",
-      "Epoch 28/80\n",
-      "60000/60000 [==============================] - 14s 234us/step - loss: 0.0829 - acc: 0.9709\n",
-      "Epoch 29/80\n",
-      "60000/60000 [==============================] - 14s 228us/step - loss: 0.0752 - acc: 0.9735\n",
-      "Epoch 30/80\n",
-      "60000/60000 [==============================] - 13s 218us/step - loss: 0.0695 - acc: 0.9754\n",
-      "Epoch 31/80\n",
-      "60000/60000 [==============================] - 13s 220us/step - loss: 0.0665 - acc: 0.9764\n",
-      "Epoch 32/80\n",
-      "60000/60000 [==============================] - 14s 235us/step - loss: 0.0626 - acc: 0.9782\n",
-      "Epoch 33/80\n",
-      "60000/60000 [==============================] - 13s 217us/step - loss: 0.0572 - acc: 0.9801\n",
-      "Epoch 34/80\n",
-      "60000/60000 [==============================] - 13s 219us/step - loss: 0.0546 - acc: 0.9814\n",
-      "Epoch 35/80\n",
-      "60000/60000 [==============================] - 16s 263us/step - loss: 0.0506 - acc: 0.9826\n",
-      "Epoch 36/80\n",
-      "60000/60000 [==============================] - 15s 258us/step - loss: 0.0477 - acc: 0.9832\n",
-      "Epoch 37/80\n",
-      "60000/60000 [==============================] - 14s 232us/step - loss: 0.0447 - acc: 0.98512s - loss: 0.0443 - a\n",
-      "Epoch 38/80\n",
-      "60000/60000 [==============================] - 14s 225us/step - loss: 0.0444 - acc: 0.9850\n",
-      "Epoch 39/80\n",
-      "60000/60000 [==============================] - 14s 234us/step - loss: 0.0406 - acc: 0.9868\n",
-      "Epoch 40/80\n",
-      "60000/60000 [==============================] - 14s 235us/step - loss: 0.0416 - acc: 0.9861\n",
-      "Epoch 41/80\n",
-      "60000/60000 [==============================] - 15s 246us/step - loss: 0.0369 - acc: 0.9879\n",
-      "Epoch 42/80\n",
-      "60000/60000 [==============================] - 13s 223us/step - loss: 0.0345 - acc: 0.9889\n",
-      "Epoch 43/80\n",
-      "60000/60000 [==============================] - 13s 213us/step - loss: 0.0337 - acc: 0.9887\n",
-      "Epoch 44/80\n",
-      "60000/60000 [==============================] - 12s 208us/step - loss: 0.0317 - acc: 0.9894\n",
-      "Epoch 45/80\n",
-      "60000/60000 [==============================] - 14s 225us/step - loss: 0.0306 - acc: 0.9900\n",
-      "Epoch 46/80\n",
-      "60000/60000 [==============================] - 13s 225us/step - loss: 0.0284 - acc: 0.9908\n",
-      "Epoch 47/80\n",
-      "60000/60000 [==============================] - 14s 237us/step - loss: 0.0282 - acc: 0.9909\n",
-      "Epoch 48/80\n",
-      "60000/60000 [==============================] - 14s 230us/step - loss: 0.0258 - acc: 0.9920\n",
-      "Epoch 49/80\n",
-      "60000/60000 [==============================] - 14s 227us/step - loss: 0.0259 - acc: 0.9919\n",
-      "Epoch 50/80\n",
-      "60000/60000 [==============================] - 14s 225us/step - loss: 0.0240 - acc: 0.9926\n",
-      "Epoch 51/80\n",
-      "60000/60000 [==============================] - 13s 219us/step - loss: 0.0241 - acc: 0.9923\n",
-      "Epoch 52/80\n",
-      "60000/60000 [==============================] - 13s 213us/step - loss: 0.0215 - acc: 0.9935\n",
-      "Epoch 53/80\n",
-      "60000/60000 [==============================] - 13s 212us/step - loss: 0.0222 - acc: 0.9933\n",
-      "Epoch 54/80\n",
-      "60000/60000 [==============================] - 13s 215us/step - loss: 0.0209 - acc: 0.9935\n",
-      "Epoch 55/80\n",
-      "60000/60000 [==============================] - 12s 206us/step - loss: 0.0192 - acc: 0.9941\n",
-      "Epoch 56/80\n",
-      "60000/60000 [==============================] - 13s 210us/step - loss: 0.0199 - acc: 0.9937\n",
-      "Epoch 57/80\n",
-      "60000/60000 [==============================] - 13s 214us/step - loss: 0.0186 - acc: 0.9944\n",
-      "Epoch 58/80\n",
-      "60000/60000 [==============================] - 12s 207us/step - loss: 0.0177 - acc: 0.9947\n",
-      "Epoch 59/80\n",
-      "60000/60000 [==============================] - 13s 219us/step - loss: 0.0172 - acc: 0.9948\n",
-      "Epoch 60/80\n",
-      "60000/60000 [==============================] - 13s 210us/step - loss: 0.0169 - acc: 0.9951\n",
-      "Epoch 61/80\n",
-      "60000/60000 [==============================] - 13s 213us/step - loss: 0.0153 - acc: 0.9955\n",
-      "Epoch 62/80\n",
-      "60000/60000 [==============================] - 13s 209us/step - loss: 0.0151 - acc: 0.9957\n",
-      "Epoch 63/80\n",
-      "60000/60000 [==============================] - 14s 228us/step - loss: 0.0148 - acc: 0.9958\n",
-      "Epoch 64/80\n",
-      "60000/60000 [==============================] - 14s 227us/step - loss: 0.0150 - acc: 0.9956\n",
-      "Epoch 65/80\n",
-      "60000/60000 [==============================] - 14s 229us/step - loss: 0.0149 - acc: 0.9955\n",
-      "Epoch 66/80\n",
-      "60000/60000 [==============================] - 14s 228us/step - loss: 0.0130 - acc: 0.9964\n",
-      "Epoch 67/80\n",
-      "60000/60000 [==============================] - 13s 222us/step - loss: 0.0126 - acc: 0.9964\n",
-      "Epoch 68/80\n",
-      "60000/60000 [==============================] - 14s 226us/step - loss: 0.0129 - acc: 0.9964\n",
-      "Epoch 69/80\n",
-      "60000/60000 [==============================] - 14s 229us/step - loss: 0.0125 - acc: 0.9965\n",
-      "Epoch 70/80\n",
-      "60000/60000 [==============================] - 14s 231us/step - loss: 0.0118 - acc: 0.9968\n",
-      "Epoch 71/80\n",
-      "60000/60000 [==============================] - 14s 226us/step - loss: 0.0116 - acc: 0.9966\n",
-      "Epoch 72/80\n",
-      "60000/60000 [==============================] - 14s 231us/step - loss: 0.0118 - acc: 0.9968\n",
-      "Epoch 73/80\n",
-      "60000/60000 [==============================] - 14s 226us/step - loss: 0.0105 - acc: 0.9974\n",
-      "Epoch 74/80\n",
-      "60000/60000 [==============================] - 14s 237us/step - loss: 0.0110 - acc: 0.9972\n",
-      "Epoch 75/80\n",
-      "60000/60000 [==============================] - 14s 228us/step - loss: 0.0111 - acc: 0.9973\n",
-      "Epoch 76/80\n",
-      "60000/60000 [==============================] - 14s 226us/step - loss: 0.0098 - acc: 0.9973\n",
-      "Epoch 77/80\n",
-      "60000/60000 [==============================] - 13s 222us/step - loss: 0.0120 - acc: 0.9966\n",
-      "Epoch 78/80\n",
-      "60000/60000 [==============================] - 13s 224us/step - loss: 0.0096 - acc: 0.9975\n",
-      "Epoch 79/80\n",
-      "60000/60000 [==============================] - 14s 227us/step - loss: 0.0089 - acc: 0.9977\n",
-      "Epoch 80/80\n",
-      "60000/60000 [==============================] - 13s 221us/step - loss: 0.0099 - acc: 0.9973\n"
+      "Epoch 1/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m28s\u001b[0m 442ms/step - accuracy: 0.6907 - loss: 30.5686\n",
+      "Epoch 2/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 431ms/step - accuracy: 0.8223 - loss: 1.6393\n",
+      "Epoch 3/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 428ms/step - accuracy: 0.8665 - loss: 0.4594\n",
+      "Epoch 4/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m27s\u001b[0m 442ms/step - accuracy: 0.8970 - loss: 0.2874\n",
+      "Epoch 5/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 425ms/step - accuracy: 0.9176 - loss: 0.2266\n",
+      "Epoch 6/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 429ms/step - accuracy: 0.9297 - loss: 0.1908\n",
+      "Epoch 7/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 418ms/step - accuracy: 0.9377 - loss: 0.1669\n",
+      "Epoch 8/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 428ms/step - accuracy: 0.9463 - loss: 0.1475\n",
+      "Epoch 9/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 432ms/step - accuracy: 0.9522 - loss: 0.1316\n",
+      "Epoch 10/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 411ms/step - accuracy: 0.9557 - loss: 0.1193\n",
+      "Epoch 11/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 423ms/step - accuracy: 0.9593 - loss: 0.1095\n",
+      "Epoch 12/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 422ms/step - accuracy: 0.9625 - loss: 0.1036\n",
+      "Epoch 13/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 434ms/step - accuracy: 0.9671 - loss: 0.0918\n",
+      "Epoch 14/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 435ms/step - accuracy: 0.9690 - loss: 0.0862\n",
+      "Epoch 15/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 436ms/step - accuracy: 0.9708 - loss: 0.0801\n",
+      "Epoch 16/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 419ms/step - accuracy: 0.9729 - loss: 0.0748\n",
+      "Epoch 17/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 427ms/step - accuracy: 0.9750 - loss: 0.0706\n",
+      "Epoch 18/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 433ms/step - accuracy: 0.9763 - loss: 0.0659\n",
+      "Epoch 19/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 416ms/step - accuracy: 0.9784 - loss: 0.0617\n",
+      "Epoch 20/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 417ms/step - accuracy: 0.9785 - loss: 0.0594\n",
+      "Epoch 21/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 424ms/step - accuracy: 0.9817 - loss: 0.0534\n",
+      "Epoch 22/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 415ms/step - accuracy: 0.9812 - loss: 0.0532\n",
+      "Epoch 23/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 428ms/step - accuracy: 0.9819 - loss: 0.0499\n",
+      "Epoch 24/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 435ms/step - accuracy: 0.9833 - loss: 0.0479\n",
+      "Epoch 25/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 436ms/step - accuracy: 0.9848 - loss: 0.0437\n",
+      "Epoch 26/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 421ms/step - accuracy: 0.9854 - loss: 0.0412\n",
+      "Epoch 27/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 427ms/step - accuracy: 0.9862 - loss: 0.0403\n",
+      "Epoch 28/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 424ms/step - accuracy: 0.9861 - loss: 0.0395\n",
+      "Epoch 29/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m25s\u001b[0m 421ms/step - accuracy: 0.9869 - loss: 0.0373\n",
+      "Epoch 30/30\n",
+      "\u001b[1m60/60\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m26s\u001b[0m 431ms/step - accuracy: 0.9884 - loss: 0.0341\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0xb25afbdd8>"
+       "<keras.src.callbacks.history.History at 0x7f718420fad0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,13 +147,13 @@
     "model.fit(\n",
     "    X_train.reshape(60000, 28, 28, 1),\n",
     "    y_train,\n",
-    "    epochs=80,\n",
+    "    epochs=30,\n",
     "    batch_size=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1675,7 +1586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -1689,7 +1600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
