Abschnitt 15: Neural Image Style Transfer

--- a/380 - Image Style Transfer/Test_Keras-Backend.ipynb
+++ b/380 - Image Style Transfer/Test_Keras-Backend.ipynb
@@ -1,64 +1,41 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tf.Tensor(147.0, shape=(), dtype=float32)\n"
-     ]
-    }
-   ],
-   "source": [
-    "x1 = tf.Variable(2.0)\n",
-    "x2 = tf.Variable(3.0)\n",
-    "\n",
-    "def z(): \n",
-    "    return 3 * x1 ** 2 + 5 * x2 ** 3 \n",
-    "print(z())"
+    "# Basics zu Tensorflow und Keras (mittlerweile integriert in TF2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=2.0>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x1)"
+    "import keras.backend as K\n",
+    "import tensorflow as tf"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(5, shape=(), dtype=int32)\n"
+     ]
+    }
+   ],
    "source": [
-    "from tensorflow.keras.optimizers import RMSprop\n",
+    "a = tf.Variable(2)\n",
+    "b = tf.Variable(3)\n",
     "\n",
-    "opt = RMSprop(learning_rate = 0.05)\n",
-    "for i in range(0, 50):\n",
-    "    opt.minimize(z, var_list = [x1, x2])"
+    "z = a + b\n",
+    "print(z)"
    ]
   },
   {
@@ -70,8 +47,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.051761236>\n",
-      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.8799515>\n"
+      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=2.0>\n",
+      "tf.Tensor(147.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = tf.Variable(2.0)\n",
+    "x2 = tf.Variable(3.0)\n",
+    "print(x1)\n",
+    "\n",
+    "def z(): \n",
+    "    return 3 * x1 ** 2 + 5 * x2 ** 3 \n",
+    "print(z())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Wie man mit TF-Keras eine Optimierung durchführt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras.optimizers import RMSprop\n",
+    "\n",
+    "opt = RMSprop(learning_rate = 0.05)\n",
+    "for i in range(0, 50):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "        loss = z()\n",
+    "    grads = tape.gradient(loss, [x1, x2])\n",
+    "    opt.apply_gradients(zip(grads, [x1, x2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.051761195>\n",
+      "<tf.Variable 'Variable:0' shape=() dtype=float32, numpy=0.87995136>\n"
      ]
     }
    ],
@@ -79,25 +103,11 @@
     "print(x1)\n",
     "print(x2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "ml",
    "language": "python",
    "name": "python3"
   },
@@ -111,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
